@@ -1,0 +1,3 @@
+# Basic project
+name: foo
+min-version: 2.0
