@@ -1,0 +1,9 @@
+kind: import
+description: This is the pony
+
+sources:
+- kind: local
+  path: "%{my-folder}/file.txt"
+
+variables:
+  my-folder: folder
