@@ -1,0 +1,6 @@
+kind: import
+description: This is the pony
+
+sources:
+- kind: local
+  path: "%{my-folder}/file.txt"
