@@ -14,6 +14,7 @@ Format
   o BREAKING CHANGE: Now deprecation warnings are suppressed using the `allow-deprecated`
     configuration with the plugin origins in project.conf, instead of on the
     source/element overrides section (See issue #1291)
+  o Variables from an element can now be used in source configurations
 
 
 Plugins
